Temporarily revert to XDisplayWidth/Height

We don't like broken master. Proper fix coming later on.

BUG: 316040